<resources>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="cancel">Abbrechen</string>
    <string name="sending">Sende…</string>

    <string name="crash_dialog_text">Leider ist HACS abgesürtzt. Das kann jedem passieren :). Bitte klicke auf OK und schicke mir damit den Report zu.</string>
    <string name="crash_dialog_comment_prompt">Platz für Kommentare</string>
    <string name="crash_dialog_ok_toast">Danke für den Report.</string>

    <string name="ask_for_permission">Bitte erlaube gleich dieser App die \'Standort\' Berechtigung. Das ist für die Erkennung des Mainframe Netzwerks notwendig. Ohne die diese Rechte wird diese App nicht richtig funktionieren.</string>
    <string name="ask_for_permission_again">Du hast der App nicht die notwendigen Rechte gewährt. Ohne diese Rechte wird sie nicht korrekt funktionieren. Du kannst das aber jetzt in den "Einstellungen" ändern.</string>

    <string name="settings_qrcode_scan">QR-Code scannen</string>
    <string name="settings_qrcode_install_app_title">Scan App fehlt</string>
    <string name="settings_qrcode_install_app">Soll eine App zum lesen von QR-Codes installiert werden? (Du wirst in den PlayStore geleitet.)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_overview">Übersicht</string>
    <string name="nav_status">Status</string>
    <string name="nav_status_next">Status Next</string>
    <string name="nav_machining">Machining</string>
    <string name="nav_woodworking">Holzwerkstatt</string>
    <string name="nav_cashbox">Cashbox</string>

    <string name="state_open">Open</string>
    <string name="state_none">Closed</string>
    <string name="state_open_plus">Open+</string>
    <string name="state_keyholder">Keyholder</string>
    <string name="state_member">Member</string>

    <string name="pkc_search_for_it">Danach suchen…</string>
    <string name="pkc_searching">Suche…</string>
    <string name="pkc_key_not_found">Der private Schlüssel konnte nicht gefunden werden. Bitte kopiere den privaten Schlüssel auf irgendeinen Ordner auf das Telefon.</string>
    <string name="pkc_select_manually">Manuell auswählen…</string>

    <string name="unknown">Unbekannt</string>
    <string name="keyholder_no_one">Niemand</string>
    <string name="nextStatus_text">Setzte den nächsten Status neu. Geht von überall (benutzt mqtt).</string>
    <string name="status_text">Setzte den aktuellen Status neu. Hierzu musst du dich im Mainframe WLan befinden.</string>
    <string name="change">ändern…</string>
    <string name="door_buzzer_outer">Unten</string>
    <string name="door_buzzer_inner_metal">Oben Metal</string>
    <string name="door_buzzer_inner_glass">Oben Glas</string>
    <string name="keyholder">Keyholder</string>
    <string name="become_keyholder">Werde Keyholder</string>
    <string name="who_is_there">Wer ist da?</string>
    <string name="reset">Zurücksetzen</string>
    <string name="more">Mehr…</string>
    <string name="mqtt_connection_lost">MQTT Verbindung verloren</string>
    <string name="reconnect">Reconnect</string>
    <string name="version">Version</string>
    <string name="licenses">Lizenzen</string>
    <string name="overview_anonPerson">anonyme Personen</string>
    <string name="overview_unknownDev">unbekannte Geräte</string>
    <string name="overview_buzzer">Tür Buzzer</string>
    <string name="machining_text">Setzte den Machining Status neu. Hierzu musst du dich im Mainframe WLan und im Keller befinden.</string>
    <string name="woodworking_text">Setzte den Holzwerkstatt Status neu. Hierzu musst du dich im Mainframe WLan und in der Holzwerkstatt befinden.</string>
    <string name="title_activity_log_viewer">Log files</string>
    <string name="overview_trashInfo">Morgen ist Abfuhr: %s</string>
    <string name="door_buttons_front">Vordertür</string>
    <string name="door_buttons_back">Hintertür</string>
</resources>
