<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/group_pages">
        <item
            android:id="@+id/nav_overview"
            android:title="@string/nav_overview"/>
        <item
            android:id="@+id/nav_status"
            android:title="@string/nav_status"/>
        <item
            android:id="@+id/nav_statusNext"
            android:title="@string/nav_status_next"/>
    </group>

    <!-- with 'none' the last item is checked if come back from settings/abount -->
    <group android:checkableBehavior="none" android:id="@+id/group_misc">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_abount"
            android:title="@string/action_about"/>
    </group>

</menu>
