<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:text="@string/pkc_search_for_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"/>

    <LinearLayout
        android:id="@+id/listPrivateKeysProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pkc_searching"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/noPrivateKeysFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkc_key_not_found"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/privateKeyList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </RadioGroup>

    </ScrollView>

    <Button
        android:text="@string/pkc_select_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/selectManuallyButton"/>

</LinearLayout>