<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/content_space_top"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              tools:context="io.mainframe.hacs.PageFragments.NextStatusFragment"
    >

    <TextView
        android:id="@+id/nextStatus_status"
        style="@android:style/TextAppearance.Material.Display2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unknown"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/nextStatus_text"/>

    <io.mainframe.hacs.components.DoorButtons
        android:id="@+id/nextStatus_doorButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </io.mainframe.hacs.components.DoorButtons>

    <Button
        android:id="@+id/nextStatus_clearStatus"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/reset"
        />

</LinearLayout>
