<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/content_space_top"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              tools:context="io.mainframe.hacs.PageFragments.MainAreaFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/status_status"
            style="@android:style/TextAppearance.Material.Display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:id="@+id/back_door_status"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_button_black"/>


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/status_text"/>

    <TextView
        style="@style/HeadlineWithSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/door_buttons_front"
        />

    <io.mainframe.hacs.components.DoorButtons
        android:id="@+id/status_doorButtons_front"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </io.mainframe.hacs.components.DoorButtons>

    <TextView
        style="@style/HeadlineWithSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/door_buttons_back"
        />

    <io.mainframe.hacs.components.DoorButtons
        android:id="@+id/status_doorButtons_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:extendedStatus="false">
    </io.mainframe.hacs.components.DoorButtons>


</LinearLayout>
